Added icon and timer (just cosmetics)

--- a/English Exam Timer.csproj
+++ b/English Exam Timer.csproj
@@ -7,6 +7,27 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Authors>Filip Lacina</Authors>
+    <Company />
+    <Product>Exam Timer</Product>
+    <Description>English exam timer - school project by Filip Lacina</Description>
+    <PackageIcon>icon.png</PackageIcon>
+    <ApplicationIcon>MainIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="MainIcon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
