Fixes for the phases and imports
This push is fixing the phases and also it is supposed to add edit for the individual phases.
Currently, the edit is not working.

--- a/WinUI version/English Exam Timer/English Exam Timer.csproj
+++ b/WinUI version/English Exam Timer/English Exam Timer.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="ModifyTimerDialog.xaml" />
+    <None Remove="PhaseInputDialog.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Page Update="ModifyTimerDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="PhaseInputDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <None Update="Resources\LICENCE.txt">
