Fixed crash with phasedialog
Fixed an issue, which caused mishandling of the PhaseTime dialog.
It would then crash instead of throwing visual feedback.

--- a/WinUI version/English Exam Timer/English Exam Timer.csproj
+++ b/WinUI version/English Exam Timer/English Exam Timer.csproj
@@ -76,14 +76,24 @@
     <PackageLicenseFile>LICENCE.txt</PackageLicenseFile>
     <ApplicationIcon>Resources\MainIcon.ico</ApplicationIcon>
     <NeutralLanguage>cs-CZ</NeutralLanguage>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-    <Optimize>True</Optimize>
+    <Optimize>False</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <Optimize>True</Optimize>
+    <Optimize>False</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
-    <Optimize>True</Optimize>
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
+    <Optimize>False</Optimize>
   </PropertyGroup>
 </Project>
