--- a/WinUI version/English Exam Timer/English Exam Timer.csproj
+++ b/WinUI version/English Exam Timer/English Exam Timer.csproj
@@ -45,12 +45,21 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Assets\icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Page Update="ModifyTimerDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="PhaseInputDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <None Update="Resources\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Update="Resources\LICENCE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -78,6 +87,11 @@
     <NeutralLanguage>cs-CZ</NeutralLanguage>
     <SignAssembly>False</SignAssembly>
     <DefaultLanguage>cs-cz</DefaultLanguage>
+    <PackageIcon>icon.png</PackageIcon>
+    <AssemblyVersion>2.0.0</AssemblyVersion>
+    <FileVersion>2.0.0</FileVersion>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <Company />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <Optimize>False</Optimize>
